--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,20 @@
-title: Hello, world! I'm David Freeman
+title: James Alvey
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I am currently studying for PhD in Theoretical Physics at King's College London.
 permalink: ':title/'
-baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+author: James Alvey # add your name
+author-img: james-alvey.jpg # add your photo
+about-author: I am currently a PhD student in Theoretical Particle Physics and Comsology at King's College London. I am interested in how to model the early Universe and use data from Cosmology to constrain new physics.  # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
+social-github: james-alvey-42 # add your Github handle
 social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
-
-# Disqus
-discus-identifier: mr-brown # add your discus identifier
+social-email: AlveyJBG@gmail.com # add your Email address
 
 # Tracker
 analytics: # Google Analytics
