--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,7 @@ site-twitter: #if your site has a twitter account, enter it here
 author: James Alvey # add your name
 author-img: james-alvey.jpg # add your photo
 about-author: I am currently a PhD student in Theoretical Particle Physics and Comsology at King's College London. I am interested in how to model the early Universe and use data from Cosmology to constrain new physics.  # add description
-social-twitter: # add your Twitter handle
-social-facebook: # add your Facebook handle
+social-twitter: James_A_42# add your Twitter handle
 social-github: james-alvey-42 # add your Github handle
 social-linkedin: # add your Linkedin handle
 social-email: AlveyJBG@gmail.com # add your Email address
