--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author-img: james-alvey.jpg # add your photo
 about-author: I am currently a PhD student in Theoretical Particle Physics and Comsology at King's College London. I am interested in how to model the early Universe and use data from Cosmology to constrain new physics.  # add description
 social-twitter: James_A_42# add your Twitter handle
 social-github: james-alvey-42 # add your Github handle
-social-linkedin: # add your Linkedin handle
+social-linkedin: james-alvey-a75845102 # add your Linkedin handle
 social-email: AlveyJBG@gmail.com # add your Email address
 
 # Tracker
