--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,11 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: James Alvey # add your name
 author-img: james-alvey.jpg # add your photo
-about-author: I am currently a PhD student in Theoretical Particle Physics and Comsology at King's College London. I am interested in how to model the early Universe and use data from Cosmology to constrain new physics.  # add description
+about-author: I am a PhD student in Theoretical Particle Physics and Comsology at King's College London. I am interested in how to model the early Universe and use data from Cosmology to constrain new physics. <br/> <br/> My work so far covers Big Bang Nucleosynthesis, Graph Networks in the context of the Cosmic Microwave Background, the Direct Detection of Light Dark Matter, and Neutrino Astrophysics. # add description
 social-twitter: James_A_42# add your Twitter handle
 social-github: james-alvey-42 # add your Github handle
 social-linkedin: james-alvey-a75845102 # add your Linkedin handle
 social-email: AlveyJBG@gmail.com # add your Email address
-
-# Tracker
-analytics: # Google Analytics
 
 # Build Settings
 markdown: kramdown
